--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="grey">#bfbfbf</color>
     <color name="custom">#b30000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
