--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin_start_end">27dp</dimen>
     <dimen name="large_text_size">24sp</dimen>
+    <dimen name="middle_text_size">18sp</dimen>
 </resources>
