--- a/app/src/main/res/layout/activity_generate_code.xml
+++ b/app/src/main/res/layout/activity_generate_code.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.nexmoverify.region.RegionViewModel" />
+            type="com.example.nexmoverify.generate.GenerateCodeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
