--- a/app/src/main/res/layout/activity_generate_code.xml
+++ b/app/src/main/res/layout/activity_generate_code.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.nexmoverify.generate.GenerateCodeViewModel" />
+            type="com.example.nexmoverify.generatecode.GenerateCodeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
         android:layout_marginStart="@dimen/margin_start_end"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="@dimen/margin_start_end"
-        tools:context=".generate.GenerateCodeActivity">
+        tools:context=".generatecode.GenerateCodeActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_first_container"
